@@ -3,6 +3,10 @@
 \alias{.Library}
 \alias{.Library.site}
 \alias{.libPaths}
+\alias{R_LIBS}
+\alias{R_LIBS_SITE}
+\alias{R_LIBS_USER}
+\alias{.expand_R_libs_env_var}
 \description{
   \code{.libPaths} gets/sets the library trees within which packages are
   looked for.
@@ -62,6 +66,23 @@
   \code{.Library.site} can be set via the environment variable
   \env{R\_LIBS\_SITE} (as a semicolon-separated list of library trees).
 #endif
+
+  Both \env{R\_LIBS\_USER} and \env{R\_LIBS\_SITE} feature possible
+  expansion of specifiers for \R version specific information as part of
+  the startup process.  The possible conversion specifiers all start
+  with a \samp{\%} and are followed by a single letter (use \samp{\%\%}
+  to obtain \samp{\%}), with currently available conversion
+  specifications as follows:
+  \describe{
+    \item{\code{\%V}}{\R version number including the patchlevel (e.g.,
+      \samp{2.5.0}).}
+    \item{\code{\%v}}{\R version number excluding the patchlevel (e.g.,
+      \samp{2.5}).}
+    \item{\code{\%p}}{the platform for which \R was built.}
+    \item{\code{\%o}}{the underlying operating system.}
+    \item{\code{\%a}}{the architecture (CPU) \R was built on/for.}
+  }
+  (See \code{\link{version}} for details on R version information.)
 
   Function \code{.libPaths} always uses the values of \code{.Library}
   and \code{.Library.site} in the base name space.  \code{.Library.site}
